fix text align

--- a/src/components/menuItem/menuItem.module.scss
+++ b/src/components/menuItem/menuItem.module.scss
@@ -5,6 +5,9 @@
   cursor: pointer;
   position: relative;
   height: 42px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .menuItem__content{
   display: flex;
