--- a/src/components/numberInCircle/numberInCircle.module.scss
+++ b/src/components/numberInCircle/numberInCircle.module.scss
@@ -5,4 +5,5 @@
   border-radius: 100%;
   background-color: $menuItemColorActive;
   color: #ffffff;
+  line-height: 25px;
 }
